# Coding-Agent

./: .gitignore  AGENTS.md  FUTURE_PLAN.md  Full-Audit.txt  README.md  opencode.json  pyproject.toml  test-email.txt
.next/: trace  trace-build
.opencode/: opencode.json
agent-docs/00_CONSTITUTION/: AGENT_CONSTITUTION.md  DESIGN_PRINCIPLES.md  PROJECT_VISION.md  SUCCESS_CRITERIA.md
agent-docs/01_ARCHITECTURE/: AGENT_TOPOLOGY.md  DATA_FLOW.md  DEPLOYMENT_ARCHITECTURE.md  MEMORY_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md  TOOL_ARCHITECTURE.md
agent-docs/02_DECISION_ENGINE/: COMPLETION_CRITERIA.md  CONFLICT_RESOLUTION.md  DECISION_ENGINE.md  ESCALATION_POLICY.md  PRIORITY_RULES.md
agent-docs/03_AGENTS/: ARCHITECT_AGENT.md  CODER_AGENT.md  DEBUGGER_AGENT.md  MANAGER_AGENT.md  MEMORY_AGENT.md  PLANNER_AGENT.md  REVIEWER_AGENT.md  TESTER_AGENT.md
agent-docs/04_MEMORY/: GLOBAL_MEMORY_SCHEMA.md  MEMORY_COMPRESSION.md  MEMORY_RETENTION_POLICY.md  MEMORY_RETRIEVAL.md  MEMORY_SERIALIZATION_STANDARD.md  MEMORY_UPDATES.md  PROJECT_MEMORY_SCHEMA.md
agent-docs/05_WORKFLOWS/: BUG_FIXING_WORKFLOW.md  FEATURE_DEVELOPMENT_WORKFLOW.md  REFACTORING_WORKFLOW.md  RELEASE_WORKFLOW.md  SOFTWARE_DEVELOPMENT_LIFECYCLE.md  TASK_EXECUTION_PIPELINE.md
backend/: main.py  seed_real.py
camera.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: smoke_test_runtime.py
tests/: integration_test.py  orchestration_test.py  test_conflict_quality.py  test_core.py  test_decision_runtime.py  test_decision_runtime_unit.py  test_engine_integration.py  test_mcp.py  test_skills.py  test_tools.py
(+131 files in other folders)
